Bug 86474 - URLs by p11-kit don't follow draft-pechanec-pkcs11uri-16
Summary: URLs by p11-kit don't follow draft-pechanec-pkcs11uri-16
Status: RESOLVED FIXED
Alias: None
Product: p11-glue
Classification: Unclassified
Component: p11-kit (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Stef Walter
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-19 22:29 UTC by Nikos Mavrogiannopoulos
Modified: 2015-02-20 20:29 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Generate the type=value instead of object-type by default (5.54 KB, patch)
2014-12-23 07:14 UTC, Nikos Mavrogiannopoulos
Details | Splinter Review

Description Nikos Mavrogiannopoulos 2014-11-19 22:29:28 UTC
In the latest drafts the 'object-type' identifier has been renamed to simply 'type'.
Comment 1 Stef Walter 2014-11-20 06:22:19 UTC
Fixed in git. We parse 'type' as a valid field, but still generate 'object-type'. This is for backwards compatibility reasons.
Comment 2 Nikos Mavrogiannopoulos 2014-11-20 07:32:18 UTC
My concern for that issue is that URLs generated by gnutls will not be readable by other applications and with the resolution at hand this is still the case. Wouldn't it be more natural to read 'object-type' in addition to 'type' and generate 'type'? Compatibility with previous versions is not a major issue as URLs are not transmitted over systems, and the downgrade of existing packages is not something that is expected to work seamlessly (e.g., you cannot downgrade shared libraries after you have compiled applications with the new one).
Comment 3 Stef Walter 2014-11-20 07:40:30 UTC
Great idea. I would merge a patch for that right away.
Comment 4 Nikos Mavrogiannopoulos 2014-12-23 07:14:52 UTC
Created attachment 111209 [details] [review]
Generate the type=value instead of object-type by default
Comment 5 Stef Walter 2015-02-20 20:25:33 UTC
Thanks. To summarize:

    We continue to accept both the older style 'object-type' field
    in addition to the new 'type' field. However we start generating
    URIs in the new form.
    
    In other words we have backwards compatibility, but not forwards
    compatibility. Given the fact that PKCS#11 URIs are now standardizing
    this is an acceptable compromise.
Comment 6 Stef Walter 2015-02-20 20:25:42 UTC
Pulled into git master.
Comment 7 Nikos Mavrogiannopoulos 2015-02-20 20:29:18 UTC
(In reply to Stef Walter from comment #6)
> Pulled into git master.

Thank you. The PKCS #11 draft is already accepted (it is in the RFC editor queue): https://datatracker.ietf.org/doc/draft-pechanec-pkcs11uri/


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.