Generate URIs compliant to the PKCS#11 URI draft in LC

We continue to accept both the older style 'object-type' field
in addition to the new 'type' field. However we start generating
URIs in the new form.

In other words we have backwards compatibility, but not forwards
compatibility. Given the fact that PKCS#11 URIs are now standardizing
this is an acceptable compromise.

https://bugs.freedesktop.org/show_bug.cgi?id=86474